<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:elevation="2dp"
    android:layout_marginTop="1dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relative_product">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/ic_launcher"
                android:id="@+id/product_image"
                android:scaleType="fitCenter"
                android:layout_alignParentStart="true"
                />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_name"
                    android:layout_toEndOf="@+id/product_image"
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/product_des"
                android:layout_toEndOf="@id/product_image"
                android:layout_below="@+id/product_name"
                android:text="@string/description"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:lineSpacingMultiplier="1.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toEndOf="@id/product_image"
                android:layout_alignParentBottom="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/product_price"
                    android:text="@string/dollar"
                    android:textStyle="bold"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/price_number"
                    android:text="@string/_12"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:paddingStart="2dp"
                    />


            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
